public enum Language {
    PYTHON,
    WEB,
    JAVA_SE,
    JAVA_EE;
}
